--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,11 @@ services:
   verdaccio:
     image: "verdaccio/verdaccio"
     container_name: verdaccio
+    environment:
+      VERDACCIO_PROTOCOL: https
     ports:
       - "4873:4873"
     volumes:
+      - ./verdaccio/conf:/verdaccio/conf
       - ./verdaccio/plugins:/verdaccio/plugins
       - ./verdaccio/storage:/verdaccio/storage
