--- a/docker-compose_proxy.yml
+++ b/docker-compose_proxy.yml
@@ -2,9 +2,11 @@ version: "3.8"
 
 services:
   reverse-proxy:
-    image: traefik:v2.3.6
+    image: traefik:v2.11
+    container_name: traefik
     ports:
       - "4873:443"
+      - "8080:8080"
     command:
       - --log.level=INFO
       - --providers.docker=true
@@ -16,16 +18,16 @@ services:
 
   verdaccio:
     image: verdaccio/verdaccio:5
+    container_name: verdaccio
     environment:
       NODE_ENV: production
     #   VERDACCIO_PUBLIC_URL: https://verdaccio.sede.frigoveneta.it
     volumes:
-      - verdaccio-data:/verdaccio
+      - ./verdaccio/conf:/verdaccio/conf
+      - ./verdaccio/plugins:/verdaccio/plugins
+      - ./verdaccio/storage:/verdaccio/storage
     labels:
       - "traefik.enable=true"
       - "traefik.http.services.verdaccio.loadbalancer.server.port=4873"
       - "traefik.http.routers.verdaccio.rule=Host(`verdaccio.sede.frigoveneta.it`)"
       - "traefik.http.routers.verdaccio.tls=true"
-
-volumes:
-  verdaccio-data:
