Update readme with verdaccio permissions. More granulated config for verdaccio now allow to publish and unpublish to all users

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: "verdaccio/verdaccio:5"
     container_name: verdaccio
     environment:
-      VERDACCIO_PUBLIC_URL: "https://10.0.0.74:4873"
+      # VERDACCIO_PUBLIC_URL: "https://10.0.0.74:4873"
       VERDACCIO_PROTOCOL: https
       # DEBUG: verdaccio:*
     ports:
