--- a/verdaccio/conf/config.yaml
+++ b/verdaccio/conf/config.yaml
@@ -1,4 +1,4 @@
-storage: ./storage
+storage: /verdaccio/storage
 auth:
   htpasswd:
     file: ./htpasswd
@@ -11,11 +11,17 @@ https:
 uplinks:
   npmjs:
     url: https://registry.npmjs.org/
+
 packages:
   '@*/*':
     access: $all
-    publish: $authenticated
+    publish: $all
+    unpublish: $all
     proxy: npmjs
   '**':
+    access: $all
+    publish: $all
+    unpublish: $all
     proxy: npmjs
+
 log: { type: stdout, format: pretty, level: http }
