feat: introduce env file to manage custom environmental variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
   verdaccio:
     image: "verdaccio/verdaccio:5"
     container_name: verdaccio
+    env_file: 
+      - .env
+      - .env.local
     environment:
-      # VERDACCIO_PUBLIC_URL: "https://10.0.0.74:4873"
       VERDACCIO_PROTOCOL: https
       # DEBUG: verdaccio:*
     ports:
